@@ -1,5 +1,12 @@
 2008-11-06  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valamethod.vala:
+	* vala/valasemanticanalyzer.vala:
+
+	Move method checking to Method.check
+
+2008-11-06  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaclass.vala:
 	* vala/valasemanticanalyzer.vala:
 
